changed the getting started page a bit.

--- a/getting-started.html
+++ b/getting-started.html
@@ -1,6 +1,9 @@
-The links that Yukaia so graciously shared.
+<body>
+    The links that Yukaia so graciously shared.
+    <br>https://yukaia.github.io/cautious-broccoli/<br/>
+    <br>https://pages.github.com/<br/>
+    <br>https://marketplace.visualstudio.com/items?itemName=yzhang.markdown-all-in-one<br/>
+    <br>https://www.mkdocs.org/<br/>
 
-https://yukaia.github.io/cautious-broccoli/
-https://pages.github.com/
-https://marketplace.visualstudio.com/items?itemName=yzhang.markdown-all-in-one
-https://www.mkdocs.org/
+
+</body>
