--- a/getting-started.html
+++ b/getting-started.html
@@ -1,9 +1,7 @@
 <body>
-    The links that Yukaia so graciously shared.
+    <p>The links that Yukaia so graciously shared.</p>
     <p>https://yukaia.github.io/cautious-broccoli/</p>
     <p>https://pages.github.com/</p>
     <p>https://marketplace.visualstudio.com/items?itemName=yzhang.markdown-all-in-one</p>
     <p>https://www.mkdocs.org/</p>
-
-
 </body>
